# FinanGPT

./: .coverage  .env.example  .gitignore  CLAUDE.md  CLAUDE_V1.md  ENHANCEMENT_PLAN_3.md  ENHANCEMENT_PLAN_4.md  ENTRY_POINTS_FIX.md  FIX_RE_SUB_ERROR.md  README.md  analyst.py  autocomplete.py  chat.py  code_analysis_findings.md  config.yaml  config_loader.py  conftest.py  date_parser.py  error_handler.py  file_organization_review.md  finangpt.py  ingest.py  ollama_interaction_findings.md  peer_groups.py  pyproject.toml  query.py  query_history.db  query_history.py  query_planner.py  requirements.txt  resilience.py  technical.py  time_utils.py  transform.py  valuation.py  visualize.py
config/: config.yaml
docs/: MODEL_SELECTION.md  TESTING.md  project_spec.md
reference/: ENHANCEMENTS_PLAN_2.md  ENHANCEMENT_PLAN.md  FinanGPT.txt  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE1_QUICKSTART.md  PHASE1_STATUS.md  PHASE2_COMPLETE.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PHASE2_QUICKSTART.md  PHASE2_STATUS.md  instructions.md
scripts/: daily_refresh.sh  migrate_history.py  migrate_structure.py
src/: README.md  constants.py  sitecustomize.py
templates/: queries.yaml
tests/: test_advanced_queries.py  test_cache_invalidation.py  test_chat_history_trim.py  test_conversational_chat.py  test_data_paths.py  test_error_resilience.py  test_freshness_bounding.py  test_freshness_tracking.py  test_ingest_batch_size.py  test_ingest_filters.py  test_logging_and_metrics.py  test_phase1_performance.py  test_phase2_global_markets.py  test_query_sql_guardrails.py  test_sql_semantics.py  (+6 more)
(+134 files in other folders)
